
@startuml
'https://plantuml.com/sequence-diagram
!includeurl https://raw.githubusercontent.com/matthewjosephtaylor/plantuml-style/40c705da84ef9e1c12591094c75f511e2a41c137/style.pu

ArcComponentsBase --|> ArcComponents
Arc o-- ArcComponents
CommandBase <|-- MoveArcToAngle
CommandBase <|-- MoveArcBySpeed
CommandBase <|-- MoveArcToPosition
MoveArcToPosition <|-- MoveArcToAngle
MoveArcToAngle <|-- MoveArcByTargetDistance
MoveArcBySpeed o-- Arc
MoveArcToPosition o-- Arc
SubsystemBase <|-- Arc

class Arc {

   ArcComponents arcComponents

   public void setSpeed()
   void setPos()
   void stop()
   boolean inPosition()
}

class ArcComponentsBase {

   LinearServo linearServo

   LinearServo getLinearServo()
}

class MoveArcToPosition {

   Arc arc
   DoubleSupplier distanceSupplier

   void execute()
   boolean isFinished()
   void end()
}

class MoveArcToAngle {
}

class MoveArcBySpeed {

   Arc arc
   DoubleSupplier speedSupplier

   void execute()
   void end()
}

class MoveArcByTargetDistance {
}

class SubsystemBase {
}

class CommandBase {
}

interface ArcComponents {

   LinearServo getLinearServo()
}

class ArcConstants {
}

class ArcDriverOiBinder {
}

@enduml
